--- a/index.html
+++ b/index.html
@@ -100,12 +100,12 @@
         <div class="row" style="padding-bottom: 1em;">
           <div class="col-md-3 ml-auto">
             <img class="rounded-circle" src="img/members/danielcosta.jpg" alt="">
-            <p class="h4">Daniel Costa</p>
+            <p class="h4">Philip Silva</p>
             <p class="lead">Bolsista</p>
           </div>
           <div class="col-md-3">
             <img class="rounded-circle" src="img/members/danielsoares.jpg" alt="">
-            <p class="h4">Daniel Soares</p>
+            <p class="h4">Mateus Santos</p>
             <p class="lead">Bolsista Voluntário</p>
           </div>
           <div class="col-md-3 mr-auto">
@@ -117,12 +117,17 @@
         <div class="row" style="padding-bottom: 1em;">
           <div class="col-md-3 ml-auto">
             <img class="rounded-circle" src="img/members/klinsmannlucas.jpg" alt="">
-            <p class="h4">Klinsmann Lucas</p>
+            <p class="h4">Davi Chaves</p>
             <p class="lead">Bolsista Voluntário</p>
           </div>
           <div class="col-md-3">
             <img class="rounded-circle" src="img/members/ramonmartins.jpg" alt="">
             <p class="h4">Ramon Martins</p>
+            <p class="lead">Bolsista Voluntário</p>
+          </div>
+          <div class="col-md-3 mr-auto">
+            <img class="rounded-circle" src="img/members/ricardocavalcante.jpg" alt="">
+            <p class="h4">Igor Benevides</p>
             <p class="lead">Bolsista Voluntário</p>
           </div>
           <div class="col-md-3 mr-auto">
