--- a/index.html
+++ b/index.html
@@ -99,12 +99,12 @@
         <h1 class="display-3" style="padding-bottom: 1.5em;">Nossos Membros</h1>
         <div class="row" style="padding-bottom: 1em;">
           <div class="col-md-3 ml-auto">
-            <img class="rounded-circle" src="img/members/danielcosta.jpg" alt="">
+            <img class="rounded-circle" src="img/members/PhilipSilva.jpg" alt="">
             <p class="h4">Philip Silva</p>
             <p class="lead">Bolsista</p>
           </div>
           <div class="col-md-3">
-            <img class="rounded-circle" src="img/members/danielsoares.jpg" alt="">
+            <img class="rounded-circle" src="img/members/MateusSantos.jpeg" alt="">
             <p class="h4">Mateus Santos</p>
             <p class="lead">Bolsista Voluntário</p>
           </div>
@@ -116,7 +116,7 @@
         </div>
         <div class="row" style="padding-bottom: 1em;">
           <div class="col-md-3 ml-auto">
-            <img class="rounded-circle" src="img/members/klinsmannlucas.jpg" alt="">
+            <img class="rounded-circle" src="img/members/DaviChaves.jpeg" alt="">
             <p class="h4">Davi Chaves</p>
             <p class="lead">Bolsista Voluntário</p>
           </div>
