--- a/index.html
+++ b/index.html
@@ -99,46 +99,46 @@
         <h1 class="display-3" style="padding-bottom: 1.5em;">Nossos Membros</h1>
         <div class="row" style="padding-bottom: 1em;">
           <div class="col-md-3 ml-auto">
-            <img width="30" height="30" class="rounded-circle" src="img/members/PhilipSilva.jpg" alt="">
+            <img width="120px" height="120px" class="rounded-circle" src="img/members/PhilipSilva.jpg" alt="">
             <p class="h4">Philip Silva</p>
             <p class="lead">Bolsista</p>
           </div>
           <div class="col-md-3">
-            <img width="30" height="30" class="rounded-circle" src="img/members/MateusSantos.jpeg" alt="">
+            <img width="120px" height="120px" class="rounded-circle" src="img/members/MateusSantos.jpeg" alt="">
             <p class="h4">Mateus Santos</p>
             <p class="lead">Bolsista Voluntário</p>
           </div>
           <div class="col-md-3 mr-auto">
-            <img width="30" height="30" class="rounded-circle" src="img/members/jareliogomes.jpg" alt="">
+            <img width="120px" height="120px" class="rounded-circle" src="img/members/jareliogomes.jpg" alt="">
             <p class="h4">Jarelio Gomes</p>
             <p class="lead">Bolsista Voluntário</p>
           </div>
         </div>
         <div class="row" style="padding-bottom: 1em;">
           <div class="col-md-3 ml-auto">
-            <img width="30" height="30" class="rounded-circle" src="img/members/DaviChaves.jpeg" alt="">
+            <img width="120px" height="120px" class="rounded-circle" src="img/members/DaviChaves.jpeg" alt="">
             <p class="h4">Davi Chaves</p>
             <p class="lead">Bolsista Voluntário</p>
           </div>
           <div class="col-md-3">
-            <img width="30" height="30" class="rounded-circle" src="img/members/ramonmartins.jpg" alt="">
+            <img width="120px" height="120px" class="rounded-circle" src="img/members/ramonmartins.jpg" alt="">
             <p class="h4">Ramon Martins</p>
             <p class="lead">Bolsista Voluntário</p>
           </div>
           <div class="col-md-3 mr-auto">
-            <img width="30" height="30" class="rounded-circle" src="img/members/ricardocavalcante.jpg" alt="">
+            <img width="120px" height="120px" class="rounded-circle" src="img/members/ricardocavalcante.jpg" alt="">
             <p class="h4">Igor Benevides</p>
             <p class="lead">Bolsista Voluntário</p>
           </div>
           <div class="col-md-3 mr-auto">
-            <img width="30" height="30"" class="rounded-circle" src="img/members/ricardocavalcante.jpg" alt="">
+            <img width="120px" height="120px" class="rounded-circle" src="img/members/ricardocavalcante.jpg" alt="">
             <p class="h4">Ricardo Cavalcante</p>
             <p class="lead">Bolsista Voluntário</p>
           </div>
         </div>
         <div class="row" style="padding-bottom: 1em;">
           <div class="col-md-12">
-            <img width="500" height="600" class="rounded-circle" src="img/members/emanuelbezerra.jpg" alt="">
+            <img width="120px" height="120px" class="rounded-circle" src="img/members/emanuelbezerra.jpg" alt="">
             <p class="h4">Emanuel Bezerra</p>
             <p class="lead">Professor Orientador</p>
           </div>
