--- a/index.html
+++ b/index.html
@@ -108,11 +108,6 @@
             <p class="h4">Mateus Santos</p>
             <p class="lead">Bolsista Voluntário</p>
           </div>
-          <div class="col-md-3 mr-auto">
-            <img width="120px" height="120px" class="rounded-circle" src="img/members/jareliogomes.jpg" alt="">
-            <p class="h4">Jarelio Gomes</p>
-            <p class="lead">Bolsista Voluntário</p>
-          </div>
         </div>
         <div class="row" style="padding-bottom: 1em;">
           <div class="col-md-3 ml-auto">
@@ -131,8 +126,8 @@
             <p class="lead">Bolsista Voluntário</p>
           </div>
           <div class="col-md-3 mr-auto">
-            <img width="120px" height="120px" class="rounded-circle" src="img/members/ricardocavalcante.jpg" alt="">
-            <p class="h4">Ricardo Cavalcante</p>
+            <img width="120px" height="120px" class="rounded-circle" src="img/members/Orton.jpg" alt="">
+            <p class="h4">Orton do Carmo</p>
             <p class="lead">Bolsista Voluntário</p>
           </div>
         </div>
