--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     </section>
     <!-- Membros -->
     <hr style="width: 90%">
-    <section id="membros">
+     <section id="membros">
       <div class="container">
         <h1 class="display-3" style="padding-bottom: 1.5em;">Nossos Membros</h1>
         <div class="row" style="padding-bottom: 1em;">
@@ -108,11 +108,12 @@
             <p class="h4">Mateus Santos</p>
             <p class="lead">Bolsista Voluntário</p>
           </div>
-          <div class="col-md-3 ml-auto">
-            <img width="180px" height="180px" class="rounded-circle" src="img/members/DaviChaves.jpeg" alt="">
-            <p class="h4">Davi Chaves</p>
-            <p class="lead">Bolsista Voluntário</p>
-          </div>
+        </div>
+        <div class="col-md-3 ml-auto">
+          <img width="180px" height="180px" class="rounded-circle" src="img/members/DaviChaves.jpeg" alt="">
+          <p class="h4">Davi Chaves</p>
+          <p class="lead">Bolsista Voluntário</p>
+        </div>
         </div>
         <div class="row" style="padding-bottom: 1em;">
           <div class="col-md-3">
@@ -133,7 +134,7 @@
         </div>
         <div class="row" style="padding-bottom: 1em;">
           <div class="col-md-12">
-            <img width="180px" height="180px" class="rounded-circle" src="img/members/emanuelbezerra.jpg" alt="">
+            <img class="rounded-circle" src="img/members/emanuelbezerra.jpg" alt="">
             <p class="h4">Emanuel Bezerra</p>
             <p class="lead">Professor Orientador</p>
           </div>
