--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <p class="h4">Philip Silva</p>
             <p class="lead">Bolsista</p>
           </div>
-          <div class="col-md-3 mr-auto">
+          <div class="col-md-3">
             <img width="180px" height="180px" class="rounded-circle" src="img/members/MateusSantos.jpeg" alt="">
             <p class="h4">Mateus Santos</p>
             <p class="lead">Bolsista Voluntário</p>
@@ -121,7 +121,7 @@
             <p class="h4">Ramon Martins</p>
             <p class="lead">Bolsista Voluntário</p>
           </div>
-          <div class="col-md-3 mr-auto">
+          <div class="col-md-3 ">
             <img width="180px" height="180px" class="rounded-circle" src="img/members/ricardocavalcante.jpg" alt="">
             <p class="h4">Igor Benevides</p>
             <p class="lead">Bolsista Voluntário</p>
