--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             </div>
             <div class="row" style="padding-bottom: 1em;">
                 <div class="col-md-12">
-                    <img class="rounded-circle" src="img/members/emanuelbezerra.jpg" alt="">
+                    <img width="180px" height="180px" class="rounded-circle" src="img/members/emanuelbezerra.jpg" alt="">
                     <p class="h4">Emanuel Bezerra</p>
                     <p class="lead">Professor Orientador</p>
                 </div>
