--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
             <a class="nav-link" href="#inicio">Início</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="https://www.rsiproject.org/blog">Blog</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="#sobre">Sobre</a>
           </li>
           <li class="nav-item">
